# grsopt

./: .gitignore  pyproject.toml
src/grsopt/: __init__.py  draw.py  grsoptimizer.py
tests/: test_GRSBetaOptimizer.py
