[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grsopt"
version = "0.1.0"
description = "A Python package for optimizing genetic risk scoring (GRS) models."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Your Name", email = "2670548227@example.com" }
]

requires-python = ">=3.9"

dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "scipy>=1.7",
    "scikit-learn >=1.3 ",
    "matplotlib >=3.7",
    "seaborn >=0.12.2"
]

[project.urls]
Homepage = "https://github.com/yourusername/grsopt"

[tool.setuptools.packages.find]
where = ["src"]